--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,10 @@
     "name": "Flies",
     "version": "1.0",
     "description": "A browser extension for the Fly-swatting-contest",
+    "permissions": ["storage"],
+    "background": {
+        "scripts": ["background.js"],
+        "persistent": false
+      },
     "manifest_version": 2
 }
