--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,27 @@
     "name": "Flies",
     "version": "1.0",
     "description": "A browser extension for the Fly-swatting-contest",
-    "permissions": ["storage"],
+    "permissions": ["declarativeContent", "storage"],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
-      },
+    },
+    "page_action": {
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "images/icon16.png",
+            "32": "images/icon32.png",
+            "48": "images/icon48.png",
+            "128": "images/icon128.png",
+            "240": "images/icon240.png"
+        }
+    },
+    "icons": {
+        "16": "images/icon16.png",
+        "32": "images/icon32.png",
+        "48": "images/icon48.png",
+        "128": "images/icon128.png",
+        "240": "images/icon240.png"
+    },
     "manifest_version": 2
 }
