created basic ui + removed backgound script

--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,7 @@
     "version": "1.0",
     "description": "A browser extension for the Fly-swatting-contest",
     "permissions": ["declarativeContent", "storage"],
-    "background": {
-        "scripts": ["background.js"],
-        "persistent": false
-    },
-    "page_action": {
+    "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
             "16": "images/icon16.png",
