basic logic working

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Flies",
     "version": "1.0",
     "description": "A browser extension for the Fly-swatting-contest",
-    "permissions": ["declarativeContent", "storage"],
+    "permissions": ["storage"],
     "browser_action": {
         "default_popup": "popup.html",
         "default_icon": {
@@ -20,5 +20,14 @@
         "128": "images/icon128.png",
         "240": "images/icon240.png"
     },
+    "background": {
+        "scripts": ["jquery-3.4.1.min.js"]
+    },
+    "content_scripts": [
+        {
+          "matches": ["http://*/*","https://*/*"],
+          "js": ["jquery-3.4.1.min.js"]
+        }
+    ],
     "manifest_version": 2
 }
