--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Flies",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "A browser extension for the Fly-swatting-contest",
     "permissions": ["storage"],
     "browser_action": {
@@ -13,7 +13,9 @@
             "240": "images/icon240.png"
         }
     },
-    "options_page": "options.html",
+    "options_ui": { 
+        "page": "options.html" 
+    },
     "icons": {
         "16": "images/icon16.png",
         "32": "images/icon32.png",
